# QtPropertyBrowser

./: .gitignore  CMakeLists.txt
cmake/: AddQt.cmake  CompileSettings.cmake  InstallProjectConfig.cmake  InstallSettings.cmake  QtPropertyBrowserConfig.cmake.in
examples/: CMakeLists.txt
examples/canvas_typed/: CMakeLists.txt  mainwindow.cpp
examples/canvas_variant/: CMakeLists.txt
examples/decoration/: CMakeLists.txt
examples/demo/: CMakeLists.txt
examples/extension/: CMakeLists.txt
examples/json/: CMakeLists.txt  json.cpp  json.h  json_settings_widget.cpp  json_settings_widget.h  sample.json  setup.json
examples/object_controller/: CMakeLists.txt
examples/simple/: CMakeLists.txt
src/: CMakeLists.txt  editor_factory_private.hpp  qtbuttonpropertybrowser.cpp  qtbuttonpropertybrowser.h  qteditorfactory.cpp  qteditorfactory.h  qtgroupboxpropertybrowser.cpp  qtgroupboxpropertybrowser.h  qtpropertybrowser.cpp  qtpropertybrowser.h  qtpropertybrowserutils.cpp  qtpropertybrowserutils_p.h  qtpropertymanager.cpp  qtpropertymanager.h  qttreepropertybrowser.cpp  qttreepropertybrowser.h  qtvariantproperty.cpp  qtvariantproperty.h
src/managers/: bool_property.cpp  bool_property.h  color_property.cpp  color_property.h  common.cpp  common.h  date_property.cpp  date_property.h  datetime_property.cpp  datetime_property.h  double_property.cpp  double_property.h  dummy.cpp  dummy.h  group_property.cpp  group_property.h  int_property.cpp  int_property.h  string_property.cpp  string_property.h  time_property.cpp  time_property.h
